feat(ai-assistant,clients,nav): FAB chat + client logos + explicit language links\n\n- AI Assistant: FAB-based floating chat via initializeAIFab(); hide static section; scope-aware chat logic; a11y and responsive CSS\n- Clients: add .client-logo wrappers, lazy logos, placeholder SVGs; stats to 12 countries; add Red Financiera de Panamá (ES)\n- Nav: language toggles now link to en/index.html and es/index.html explicitly

--- a/es/index.html
+++ b/es/index.html
@@ -41,7 +41,7 @@
                         <button class="nav-cta" onclick="scrollToSection('contact')">Solicitar Demo</button>
                     </li>
                     <li class="nav-item language-switcher">
-                        <a href="../en/index.html" class="nav-link">🇺🇸 EN</a>
+                        <a href="../en/index.htmlindex.html" class="nav-link">🇺🇸 EN</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -442,7 +442,7 @@
 <section id="clientes" class="section hero hero--small hero-gradient-3">
     <div class="hero-inner">
         <h1>Impulsando el Crecimiento Financiero en América Latina</h1>
-        <p>Confianza de 35+ instituciones financieras en 8 países con resultados comprobados de 454% de crecimiento promedio</p>
+        <p>Confianza de 35+ instituciones financieras en 12 países con resultados comprobados de 454% de crecimiento promedio</p>
         
         <!-- Estadísticas Mejoradas -->
         <div class="hero-stats" style="margin-top: var(--spacing-xl); display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: var(--spacing-lg); text-align: center;">
@@ -455,7 +455,7 @@
                 <span style="color: var(--muted); font-size: 0.9rem;">Crecimiento Promedio de Activos</span>
             </div>
             <div class="stat">
-                <span style="font-size: 2.5rem; font-weight: 700; color: var(--brand-2); display: block;">8</span>
+                <span style="font-size: 2.5rem; font-weight: 700; color: var(--brand-2); display: block;">12</span>
                 <span style="color: var(--muted); font-size: 0.9rem;">Países Atendidos</span>
             </div>
             <div class="stat">
@@ -495,54 +495,63 @@
         <div class="enhanced-client-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: var(--spacing-lg);">
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Líder Financiero</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/jep.svg" alt="JEP logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">JEP</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Una de las instituciones financieras líderes de Ecuador</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Banca Indígena</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/mushuc_runa.svg" alt="Mushuc Runa logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Mushuc Runa</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Primer banco indígena de América Latina</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Líder Cooperativo</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_atuntaqui.svg" alt="Cooperativa Atuntaqui logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Atuntaqui</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Cooperativa progresista sirviendo al norte de Ecuador</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Banca Regional</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_la_dolorosa.svg" alt="Cooperativa La Dolorosa logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa La Dolorosa</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Cooperativa regional establecida</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Región Montañosa</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_vision_de_los_andes.svg" alt="Cooperativa Visión de los Andes logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Visión de los Andes</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Servicios financieros regionales</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Cooperativa en Crecimiento</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_senor_de_giron.svg" alt="Cooperativa Señor de Girón logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Señor de Girón</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Servicios financieros centrados en la comunidad</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Comunidad Local</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_luz_del_valle.svg" alt="Cooperativa Luz del Valle logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Luz del Valle</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Enfoque en desarrollo comunitario</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Valores Tradicionales</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_pilahuin_tio.svg" alt="Cooperativa Pilahuin Tio logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Pilahuin Tio</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Banca comunitaria indígena</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Cooperativa Educativa</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_padre_julian_lorente.svg" alt="Cooperativa Padre Julián Lorente logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Padre Julián Lorente</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Especializada en el sector educativo</p>
             </div>
@@ -560,18 +569,21 @@
         <div class="enhanced-client-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: var(--spacing-lg);">
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Banca Internacional</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/global_bank_corp.svg" alt="Global Bank Corp logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Global Bank Corp</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Expandiendo soluciones de banca digital</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Innovación Digital</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/caribbean_financial.svg" alt="Caribbean Financial logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Caribbean Financial</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Liderando soluciones fintech</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Expansión Regional</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/red_financiera_de_panama.svg" alt="Red Financiera de Panamá logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Red Financiera de Panamá</h3>
                 <p style="color: var(--muted); font-size: 0.9rem; margin-bottom: var(--spacing-md);">Instituciones financieras con fuerte presencia regional, enfocadas en desarrollo económico y transacciones transfronterizas.</p>
                 <div style="display: flex; flex-wrap: wrap; gap: var(--spacing-xs);">
@@ -945,7 +957,7 @@
                         <li><a href="#about">Nosotros (21+ Años)</a></li>
                         <li><a href="#clients">Nuestros Clientes</a></li>
                         <li><a href="#contact">Contacto</a></li>
-                        <li><a href="../en/">English</a></li>
+                        <li><a href="../en/index.html">English</a></li>
                     </ul>
                 </div>
                 
