fix(cta): make CTA button use accent color on EN/ES and correct ES anchor to #contact

--- a/es/index.html
+++ b/es/index.html
@@ -721,7 +721,7 @@
             Únete a la creciente red de instituciones financieras exitosas impulsadas por FIT-BANK
         </p>
         <div style="display: flex; gap: var(--spacing-md); justify-content: center; flex-wrap: wrap;">
-            <a href="#contacto" style="background: white; color: var(--brand); padding: var(--spacing-md) var(--spacing-xl); border-radius: var(--border-radius-small); font-weight: 600; text-decoration: none; transition: var(--transition);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
+            <a href="#contact" style="background: var(--brand-accent); color: white; padding: var(--spacing-md) var(--spacing-xl); border-radius: var(--border-radius-small); font-weight: 600; text-decoration: none; transition: var(--transition);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
                 Contáctanos Hoy
             </a>
             <a href="#demo" style="background: rgba(255,255,255,0.2); color: white; padding: var(--spacing-md) var(--spacing-xl); border-radius: var(--border-radius-small); font-weight: 600; text-decoration: none; border: 2px solid rgba(255,255,255,0.3); transition: var(--transition);" onmouseover="this.style.background='rgba(255,255,255,0.3)'" onmouseout="this.style.background='rgba(255,255,255,0.2)'">
