--- a/en/index.html
+++ b/en/index.html
@@ -607,7 +607,7 @@
             <h2 style="font-size: 2rem; margin-bottom: var(--spacing-md); color: white;">Ready to Transform Your Financial Institution?</h2>
             <p style="font-size: 1.2rem; margin-bottom: var(--spacing-xl); opacity: 0.9;">Join the growing network of successful financial institutions powered by FIT-BANK</p>
             <div style="display: flex; gap: var(--spacing-md); justify-content: center; flex-wrap: wrap;">
-                <a href="#contact" style="background: white; color: var(--brand); padding: var(--spacing-md) var(--spacing-xl); border-radius: var(--border-radius-small); font-weight: 600; text-decoration: none; transition: var(--transition);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
+                <a href="#contact" style="background: var(--brand-accent); color: white; padding: var(--spacing-md) var(--spacing-xl); border-radius: var(--border-radius-small); font-weight: 600; text-decoration: none; transition: var(--transition);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
                     Contact Us Today
                 </a>
                 <a href="#demo" style="background: rgba(255,255,255,0.2); color: white; padding: var(--spacing-md) var(--spacing-xl); border-radius: var(--border-radius-small); font-weight: 600; text-decoration: none; border: 2px solid rgba(255,255,255,0.3); transition: var(--transition);" onmouseover="this.style.background='rgba(255,255,255,0.3)'" onmouseout="this.style.background='rgba(255,255,255,0.2)'">
