feat(clients): add team_work.webp illustration to Clients section on EN and ES pages with lazy loading and styling

--- a/en/index.html
+++ b/en/index.html
@@ -432,6 +432,9 @@
     <div class="hero-inner">
         <h1>Powering Financial Growth Across Latin America</h1>
         <p>Trusted by 35+ financial institutions in 12 countries with proven 454% average growth results</p>
+        <div class="clients-illustration" style="display:flex;justify-content:center;margin: var(--spacing-lg) 0;">
+            <img src="../assets/team_work.webp" alt="Team collaborating - FIT-BANK clients" style="max-width: 100%; height: auto; width: min(820px, 100%); border-radius: var(--border-radius-small); box-shadow: 0 10px 30px rgba(0,0,0,0.2);" loading="lazy">
+        </div>
         
         <!-- Ecuador Region -->
         <div class="regional-section" style="margin-bottom: var(--spacing-2xl);">
