--- a/es/index.html
+++ b/es/index.html
@@ -427,6 +427,9 @@
     <div class="hero-inner">
         <h1>Impulsando el Crecimiento Financiero en América Latina</h1>
         <p>Confianza de 35+ instituciones financieras en 12 países con resultados comprobados de 454% de crecimiento promedio</p>
+        <div class="clients-illustration" style="display:flex;justify-content:center;margin: var(--spacing-lg) 0;">
+            <img src="../assets/team_work.webp" alt="Equipo colaborando - clientes FIT-BANK" style="max-width: 100%; height: auto; width: min(820px, 100%); border-radius: var(--border-radius-small); box-shadow: 0 10px 30px rgba(0,0,0,0.2);" loading="lazy">
+        </div>
         
         <!-- Estadísticas Mejoradas -->
         <div class="hero-stats" style="margin-top: var(--spacing-xl); display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: var(--spacing-lg); text-align: center;">
