--- a/en/index.html
+++ b/en/index.html
@@ -67,7 +67,7 @@
                         <a href="../es/index.html" class="nav-link">🇪🇸 ES</a>
                     </li>
                 </ul>
-                <div class="hamburger" onclick="toggleMenu()">
+                <div class="hamburger">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
