fix: ensure consistency between English and Spanish webpage versions
- Fixed Spanish version navigation: changed section id from 'clientes' to 'clients' to match navigation links
- Added missing testimonials section to English version for parity with Spanish version
- Both versions now have identical section structure and working navigation
- All navigation links verified to work correctly (except #demo which is consistently missing in both versions)
- Enhanced cross-language webpage consistency as requested

--- a/en/index.html
+++ b/en/index.html
@@ -619,6 +619,30 @@
             </div>
         </div>
     </div>
+
+<!-- Additional Testimonials -->
+    <div class="testimonials-section" style="margin-bottom: var(--spacing-2xl);">
+        <h2 style="text-align: center; color: var(--brand-2); margin-bottom: var(--spacing-xl); font-size: 1.8rem;">What Our Clients Say</h2>
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: var(--spacing-lg);">
+            <div style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg);">
+                <div style="color: var(--brand); font-size: 1.5rem; margin-bottom: var(--spacing-sm);">★★★★★</div>
+                <blockquote style="font-style: italic; color: var(--ink); margin-bottom: var(--spacing-md);">
+                    "FIT-BANK implementation was seamless. The support team is exceptional and the system is incredibly robust."
+                </blockquote>
+                <div style="font-weight: 600; color: var(--brand-2);">IT Director</div>
+                <div style="color: var(--muted); font-size: 0.9rem;">Cooperativa Atuntaqui</div>
+            </div>
+            
+            <div style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg);">
+                <div style="color: var(--brand); font-size: 1.5rem; margin-bottom: var(--spacing-sm);">★★★★★</div>
+                <blockquote style="font-style: italic; color: var(--ink); margin-bottom: var(--spacing-md);">
+                    "FIT-BANK allowed us to completely modernize our banking processes. Highly recommended."
+                </blockquote>
+                <div style="font-weight: 600; color: var(--brand-2);">General Manager</div>
+                <div style="color: var(--muted); font-size: 0.9rem;">Mushuc Runa</div>
+            </div>
+        </div>
+    </div>
 </section>
 
     <!-- AI Assistant Section -->
