--- a/es/index.html
+++ b/es/index.html
@@ -423,7 +423,7 @@
     </section>
 
     <!-- Sección Mejorada de Clientes para Versión Española -->
-<section id="clientes" class="section hero hero--small hero-gradient-3">
+<section id="clients" class="section hero hero--small hero-gradient-3">
     <div class="hero-inner">
         <h1>Impulsando el Crecimiento Financiero en América Latina</h1>
         <p>Confianza de 35+ instituciones financieras en 12 países con resultados comprobados de 454% de crecimiento promedio</p>
