--- a/es/index.html
+++ b/es/index.html
@@ -950,9 +950,10 @@
                 
                 <div class="footer-section">
                     <h4>Información de Contacto</h4>
-                    <p>📧 info@fit-bank.com</p>
-                    <p>📱 +593 2 XXX-XXXX</p>
-                    <p>🏢 Quito, Ecuador</p>
+                    <p>📧 info@softwarehouse.com.ec</p>
+                    <p>📱 +593 98 453-8500 / +593 99 974-4957</p>
+                    <p>🏢 Nela Martínez s/n intersección Camilo Ponce Enríquez acceso Autopista General Rumiñahui, Puente 3<br>
+                    Conocoto – Quito - Ecuador</p>
                     <p>🕒 Lun-Vie: 09:00 AM - 06:00 PM</p>
                 </div>
             </div>
