Add SoftWarehous SA sign at team work photo.

--- a/es/index.html
+++ b/es/index.html
@@ -428,7 +428,7 @@
         <h1>Impulsando el Crecimiento Financiero en América Latina</h1>
         <p>Confianza de 35+ instituciones financieras en 12 países con resultados comprobados de 454% de crecimiento promedio</p>
         <div class="clients-illustration" style="display:flex;justify-content:center;margin: var(--spacing-lg) 0;">
-            <img src="../assets/team_work.webp" alt="Equipo colaborando - clientes FIT-BANK" style="max-width: 100%; height: auto; width: min(820px, 100%); border-radius: var(--border-radius-small); box-shadow: 0 10px 30px rgba(0,0,0,0.2);" loading="lazy">
+            <img src="../assets/team_work.png" alt="Equipo colaborando - clientes FIT-BANK" style="max-width: 100%; height: auto; width: min(820px, 100%); border-radius: var(--border-radius-small); box-shadow: 0 10px 30px rgba(0,0,0,0.2);" loading="lazy">
         </div>
         
         <!-- Estadísticas Mejoradas -->
@@ -807,15 +807,16 @@
                         <h3>Comience Hoy</h3>
                         <div class="contact-item">
                             <span class="contact-icon">📧</span>
-                            <span>info@fit-bank.com</span>
+                            <span>info@softwarehouse.com.ec</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">📱</span>
-                            <span>+593 2 XXX-XXXX</span>
+                            <span>+593 98 453-8500 / +593 99 974-4957</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">🏢</span>
-                            <span>Quito, Ecuador</span>
+                            <span>Nela Martínez s/n intersección Camilo Ponce Enríquez acceso Autopista General Rumiñahui, Puente 3<br>
+                            Conocoto – Quito - Ecuador</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">🕒</span>
