--- a/en/index.html
+++ b/en/index.html
@@ -433,7 +433,7 @@
         <h1>Powering Financial Growth Across Latin America</h1>
         <p>Trusted by 35+ financial institutions in 12 countries with proven 454% average growth results</p>
         <div class="clients-illustration" style="display:flex;justify-content:center;margin: var(--spacing-lg) 0;">
-            <img src="../assets/team_work.webp" alt="Team collaborating - FIT-BANK clients" style="max-width: 100%; height: auto; width: min(820px, 100%); border-radius: var(--border-radius-small); box-shadow: 0 10px 30px rgba(0,0,0,0.2);" loading="lazy">
+            <img src="../assets/team_work.png" alt="Team collaborating - FIT-BANK clients" style="max-width: 100%; height: auto; width: min(820px, 100%); border-radius: var(--border-radius-small); box-shadow: 0 10px 30px rgba(0,0,0,0.2);" loading="lazy">
         </div>
         
         <!-- Ecuador Region -->
@@ -694,15 +694,16 @@
                         <h3>Get Started Today</h3>
                         <div class="contact-item">
                             <span class="contact-icon">📧</span>
-                            <span>info@fit-bank.com</span>
+                            <span>info@softwarehouse.com.ec</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">📱</span>
-                            <span>+593 2 XXX-XXXX</span>
+                            <span>+593 98 453-8500 / +593 99 974-4957</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">🏢</span>
-                            <span>Quito, Ecuador</span>
+                            <span>Nela Martínez s/n intersección Camilo Ponce Enríquez acceso Autopista General Rumiñahui, Puente 3<br>
+                            Conocoto – Quito - Ecuador</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">🕒</span>
