Correct metrics according to propper company information.

--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIT-BANK - Revolutionary Core Banking System for Latin America</title>
-    <meta name="description" content="Discover FIT-BANK, the most comprehensive integrated central banking system. 21+ years experience, 35+ financial institutions, proven 454% growth results across Ecuador, Central America, Caribbean, Peru, and UK.">
+    <meta name="description" content="Discover FIT-BANK, the most comprehensive integrated central banking system. 23+ years experience, 42+ financial institutions, proven 454% growth results across Ecuador, Central America, Caribbean, Peru, and UK.">
     <meta name="keywords" content="core banking, fintech, Ecuador, banking software, financial technology, Latin America, AI banking, cooperative banking, SEPS, banking modules">
     <link rel="canonical" href="https://www.fit-bank.com/en/">
     <link rel="alternate" hreflang="es" href="https://www.fit-bank.com/es/">
@@ -120,7 +120,7 @@
                             <span class="highlight-text">Years of Experience</span>
                         </div>
                         <div class="highlight-item">
-                            <span class="highlight-number">35+</span>
+                            <span class="highlight-number">42+</span>
                             <span class="highlight-text">Institutions Served</span>
                         </div>
                         <div class="highlight-item">
@@ -431,7 +431,7 @@
 <section id="clients" class="section hero hero--small hero-gradient-3">
     <div class="hero-inner">
         <h1>Powering Financial Growth Across Latin America</h1>
-        <p>Trusted by 35+ financial institutions in 12 countries with proven 454% average growth results</p>
+        <p>Trusted by 42+ financial institutions in 8 countries</p>
         <div class="clients-illustration" style="display:flex;justify-content:center;margin: var(--spacing-lg) 0;">
             <img src="../assets/team_work.png" alt="Team collaborating - FIT-BANK clients" style="max-width: 100%; height: auto; width: min(820px, 100%); border-radius: var(--border-radius-small); box-shadow: 0 10px 30px rgba(0,0,0,0.2);" loading="lazy">
         </div>
@@ -543,6 +543,11 @@
             <h2 style="font-size: 1.5rem; color: var(--brand-2); margin-bottom: var(--spacing-lg);">Our Global Presence</h2>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: var(--spacing-md); margin-bottom: var(--spacing-lg);">
                 <div style="background: var(--chip); padding: var(--spacing-md); border-radius: var(--border-radius-small); transition: var(--transition); cursor: pointer;" onmouseover="this.style.background='var(--brand)'; this.style.color='var(--bg)'" onmouseout="this.style.background='var(--chip)'; this.style.color='var(--ink)'">
+                    <div style="font-size: 1.5rem; margin-bottom: var(--spacing-xs);">🇪🇨</div>
+                    <div style="font-weight: 600; margin-bottom: var(--spacing-xs);">Ecuador</div>
+                    <div style="font-size: 0.8rem; opacity: 0.8;">27+ clients</div>
+                </div>
+                <div style="background: var(--chip); padding: var(--spacing-md); border-radius: var(--border-radius-small); transition: var(--transition); cursor: pointer;" onmouseover="this.style.background='var(--brand)'; this.style.color='var(--bg)'" onmouseout="this.style.background='var(--chip)'; this.style.color='var(--ink)'">
                     <div style="font-size: 1.5rem; margin-bottom: var(--spacing-xs);">🇵🇷</div>
                     <div style="font-weight: 600; margin-bottom: var(--spacing-xs);">Puerto Rico</div>
                     <div style="font-size: 0.8rem; opacity: 0.8;">1+ clients</div>
@@ -562,26 +567,6 @@
                     <div style="font-weight: 600; margin-bottom: var(--spacing-xs);">Belize</div>
                     <div style="font-size: 0.8rem; opacity: 0.8;">2+ clients</div>
                 </div>
-                <div style="background: var(--chip); padding: var(--spacing-md); border-radius: var(--border-radius-small); transition: var(--transition); cursor: pointer;" onmouseover="this.style.background='var(--brand)'; this.style.color='var(--bg)'" onmouseout="this.style.background='var(--chip)'; this.style.color='var(--ink)'">
-                    <div style="font-size: 1.5rem; margin-bottom: var(--spacing-xs);">🇪🇨</div>
-                    <div style="font-weight: 600; margin-bottom: var(--spacing-xs);">Ecuador</div>
-                    <div style="font-size: 0.8rem; opacity: 0.8;">27+ clients</div>
-                </div>
-                <div style="background: var(--chip); padding: var(--spacing-md); border-radius: var(--border-radius-small); transition: var(--transition); cursor: pointer;" onmouseover="this.style.background='var(--brand)'; this.style.color='var(--bg)'" onmouseout="this.style.background='var(--chip)'; this.style.color='var(--ink)'">
-                    <div style="font-size: 1.5rem; margin-bottom: var(--spacing-xs);">🇬🇹</div>
-                    <div style="font-weight: 600; margin-bottom: var(--spacing-xs);">Guatemala</div>
-                    <div style="font-size: 0.8rem; opacity: 0.8;">2+ clients</div>
-                </div>
-                <div style="background: var(--chip); padding: var(--spacing-md); border-radius: var(--border-radius-small); transition: var(--transition); cursor: pointer;" onmouseover="this.style.background='var(--brand)'; this.style.color='var(--bg)'" onmouseout="this.style.background='var(--chip)'; this.style.color='var(--ink)'">
-                    <div style="font-size: 1.5rem; margin-bottom: var(--spacing-xs);">🇭🇳</div>
-                    <div style="font-weight: 600; margin-bottom: var(--spacing-xs);">Honduras</div>
-                    <div style="font-size: 0.8rem; opacity: 0.8;">1+ clients</div>
-                </div>
-                <div style="background: var(--chip); padding: var(--spacing-md); border-radius: var(--border-radius-small); transition: var(--transition); cursor: pointer;" onmouseover="this.style.background='var(--brand)'; this.style.color='var(--bg)'" onmouseout="this.style.background='var(--chip)'; this.style.color='var(--ink)'">
-                    <div style="font-size: 1.5rem; margin-bottom: var(--spacing-xs);">🇨🇷</div>
-                    <div style="font-weight: 600; margin-bottom: var(--spacing-xs);">Costa Rica</div>
-                    <div style="font-size: 0.8rem; opacity: 0.8;">1+ clients</div>
-                </div>
             </div>
             
             <!-- Success Metrics -->
@@ -591,11 +576,11 @@
                     <div style="color: var(--muted); font-size: 0.9rem;">Average Growth</div>
                 </div>
                 <div style="text-align: center;">
-                    <div style="font-size: 2.5rem; font-weight: 700; color: var(--brand-2); margin-bottom: var(--spacing-xs);">35+</div>
+                    <div style="font-size: 2.5rem; font-weight: 700; color: var(--brand-2); margin-bottom: var(--spacing-xs);">42+</div>
                     <div style="color: var(--muted); font-size: 0.9rem;">Financial Institutions</div>
                 </div>
                 <div style="text-align: center;">
-                    <div style="font-size: 2.5rem; font-weight: 700; color: var(--brand-2); margin-bottom: var(--spacing-xs);">12</div>
+                    <div style="font-size: 2.5rem; font-weight: 700; color: var(--brand-2); margin-bottom: var(--spacing-xs);">8</div>
                     <div style="color: var(--muted); font-size: 0.9rem;">Countries</div>
                 </div>
                 <div style="text-align: center;">
@@ -685,7 +670,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2>Ready to Revolutionize Your Financial Institution?</h2>
-            <p class="section-subtitle" data-years-experience="full">Join 35+ institutions already transforming with FIT-BANK's 21 years of proven expertise</p>
+            <p class="section-subtitle" data-years-experience="full">Join 42+ institutions already transforming with FIT-BANK's 21 years of proven expertise</p>
             
             <div class="contact-content-enhanced">
                 <!-- Left side with contact info and illustration -->
@@ -778,7 +763,7 @@
                 </div>
                 <div class="trust-item">
                     <span class="trust-icon">🌎</span>
-                    <span class="trust-text">12 Countries Served</span>
+                    <span class="trust-text">8 Countries Served</span>
                 </div>
                 <div class="trust-item">
                     <span class="trust-icon">📈</span>
@@ -800,8 +785,8 @@
                     <img src="../assets/logo_softwarehouse_large.b9e74024f957169272ab58d7596e8e65.svg" alt="FIT-BANK Logo" class="footer-logo">
                     <p data-years-experience="full"><strong>Soft Warehouse S.A.</strong> - 21+ years transforming financial institutions across Latin America with revolutionary banking technology.</p>
                     <div class="footer-stats">
-                        <span>🏢 35+ Institutions Served</span>
-                        <span>🌎 12 Countries</span>
+                        <span>🏢 42+ Institutions Served</span>
+                        <span>🌎 8 Countries</span>
                         <span>📈 454% Proven Growth</span>
                     </div>
                 </div>
