--- a/en/index.html
+++ b/en/index.html
@@ -89,7 +89,7 @@
             <!-- Right side - Content -->
             <div class="hero-content">
                 <div class="hero-logo-large">
-                    <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="hero-logo-img">
+                    <img src="../assets/logo_softwarehouse_fondo_blanco_glow.png" alt="FIT-BANK Logo" class="hero-logo-img">
                 </div>
                 <h1>Revolutionizing Banking Systems</h1>
                 <p class="hero-subtitle">The Most Comprehensive Integrated Central Banking System</p>
