--- a/es/index.html
+++ b/es/index.html
@@ -66,7 +66,7 @@
             <!-- Right side - Content -->
             <div class="hero-content">
                 <div class="hero-logo-large">
-                    <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="hero-logo-img">
+                    <img src="../assets/logo_softwarehouse_fondo_blanco.png" alt="FIT-BANK Logo" class="hero-logo-img">
                 </div>
                 <h1>Revolucionando los Sistemas Bancarios</h1>
                 <p class="hero-subtitle">El Sistema Bancario Central Integrado Más Completo</p>
@@ -482,21 +482,21 @@
         <div class="enhanced-client-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: var(--spacing-lg);">
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Líder Financiero</span>
-                <div class="client-logo"><img class="lazy" data-src="../assets/logos/jep.svg" alt="JEP logo"></div>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/jep.png" alt="JEP logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">JEP</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Una de las instituciones financieras líderes de Ecuador</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Banca Indígena</span>
-                <div class="client-logo"><img class="lazy" data-src="../assets/logos/mushuc_runa.svg" alt="Mushuc Runa logo"></div>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/mushuc_runa.png" alt="Mushuc Runa logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Mushuc Runa</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Primer banco indígena de América Latina</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Líder Cooperativo</span>
-                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_atuntaqui.svg" alt="Cooperativa Atuntaqui logo"></div>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/atuntaqui.png" alt="Cooperativa Atuntaqui logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Atuntaqui</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Cooperativa progresista sirviendo al norte de Ecuador</p>
             </div>
@@ -510,7 +510,7 @@
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Región Montañosa</span>
-                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_vision_de_los_andes.svg" alt="Cooperativa Visión de los Andes logo"></div>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/visandes.png" alt="Cooperativa Visión de los Andes logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Visión de los Andes</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Servicios financieros regionales</p>
             </div>
@@ -524,21 +524,21 @@
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Comunidad Local</span>
-                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_luz_del_valle.svg" alt="Cooperativa Luz del Valle logo"></div>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/luz_valle.png" alt="Cooperativa Luz del Valle logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Luz del Valle</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Enfoque en desarrollo comunitario</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Valores Tradicionales</span>
-                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_pilahuin_tio.svg" alt="Cooperativa Pilahuin Tio logo"></div>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/pilahuin_tio.png" alt="Cooperativa Pilahuin Tio logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Pilahuin Tio</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Banca comunitaria indígena</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Cooperativa Educativa</span>
-                <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_padre_julian_lorente.svg" alt="Cooperativa Padre Julián Lorente logo"></div>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/julian.png" alt="Cooperativa Padre Julián Lorente logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Padre Julián Lorente</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Especializada en el sector educativo</p>
             </div>
@@ -556,7 +556,7 @@
         <div class="enhanced-client-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: var(--spacing-lg);">
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Banca Internacional</span>
-                <div class="client-logo"><img class="lazy" data-src="../assets/logos/global_bank_corp.svg" alt="Global Bank Corp logo"></div>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/igb_bank.png" alt="Global Bank Corp logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Global Bank Corp</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Expandiendo soluciones de banca digital</p>
             </div>
