Move clients section bellow hero image/.

--- a/en/index.html
+++ b/en/index.html
@@ -78,7 +78,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-container">
+        <div class="hero-container hero-container-with-clients">
             <!-- Left side - Image -->
             <div class="hero-image-section">
                 <div class="hero-image-wrapper">
@@ -97,6 +97,39 @@
                 <div class="hero-buttons">
                     <button class="btn-primary" onclick="scrollToSection('contact')">Get Started</button>
                     <button class="btn-secondary" onclick="scrollToSection('features')">Learn More</button>
+                </div>
+            </div>
+
+            <!-- Clients Section - Side by Side -->
+            <div class="hero-clients-section">
+                <h3 style="color: var(--brand-accent); margin-bottom: var(--spacing-md); font-size: 1.3rem; text-align: center;">Trusted by 42+ Institutions</h3>
+                <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: var(--spacing-md); margin-bottom: var(--spacing-md);">
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
+                        <img src="../assets/logos/jep.png" alt="JEP" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
+                        <img src="../assets/logos/mushuc_runa.png" alt="Mushuc Runa" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
+                        <img src="../assets/logos/atuntaqui.png" alt="Atuntaqui" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
+                        <img src="../assets/logos/cooperativa_la_dolorosa.svg" alt="La Dolorosa" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
+                        <img src="../assets/logos/visandes.png" alt="Visandes" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
+                        <img src="../assets/logos/igb_bank.png" alt="IGB Bank" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    </div>
+                </div>
+                <div style="text-align: center; padding: var(--spacing-md); background: rgba(0, 147, 234, 0.1); border-radius: 8px; border: 1px solid rgba(0, 147, 234, 0.3);">
+                    <p style="color: var(--ink); margin: 0; font-size: 0.95rem; line-height: 1.4;">
+                        <strong style="color: var(--brand-accent);">454% Growth</strong> •
+                        <strong style="color: var(--brand-accent);">8 Countries</strong> •
+                        <strong style="color: var(--brand-accent);">24/7 Support</strong>
+                    </p>
+                    <a href="#clients" style="display: inline-block; margin-top: var(--spacing-sm); color: var(--brand-primary); text-decoration: none; font-weight: 600; font-size: 0.9rem;">View All Clients →</a>
                 </div>
             </div>
         </div>
