feat: Add hero-clients-section container with scroll and smaller logos
- Added hero-clients-section div container with scrollable content (max-height: 600px)
- Reduced logo sizes from 50px to 35px (max-height) and 180px to 120px (max-width)
- Added custom scrollbar styling for hero-clients-section
- Added all missing clients to both English and Spanish versions:
  * Added Cooperativa Padre Julián Lorente to English Ecuador section
  * Added Red Financiera de Panamá to English Central America section
  * Added Peru & United Kingdom section to English version with:
    - Banco Andino del Perú
    - Financial Services London
  * Added Central America United Bank to Spanish version
- Both versions now include all 15 available client logos
- Improved consistency between English and Spanish client sections

--- a/es/index.html
+++ b/es/index.html
@@ -487,6 +487,8 @@
 </section>
 
 <section class="container">
+    <!-- Hero Clients Section Container with Scroll -->
+    <div class="hero-clients-section">
     <!-- Historia de Éxito Destacada -->
     <div class="success-stories" style="margin-bottom: var(--spacing-2xl);">
         <div class="success-story-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius); padding: var(--spacing-xl); margin-bottom: var(--spacing-lg); position: relative;">
@@ -599,6 +601,16 @@
                 <div class="client-logo"><img class="lazy" data-src="../assets/logos/caribbean_financial.svg" alt="Caribbean Financial logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Caribbean Financial</h3>
                 <p style="color: var(--muted); font-size: 0.9rem;">Liderando soluciones fintech</p>
+            </div>
+
+            <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
+                <div style="display: flex; gap: var(--spacing-xs); margin-bottom: var(--spacing-sm);">
+                    <span style="background: rgba(134, 239, 172, 0.1); color: #22c55e; padding: var(--spacing-xs); border-radius: 6px; font-size: 0.75rem;">Crecimiento</span>
+                    <span style="background: rgba(90, 162, 255, 0.1); color: var(--brand); padding: var(--spacing-xs); border-radius: 6px; font-size: 0.75rem;">Fintech</span>
+                </div>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/central_america_united_bank.svg" alt="Central America United Bank logo"></div>
+                <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Central America United Bank</h3>
+                <p style="color: var(--muted); font-size: 0.9rem;">Expansión de la banca regional</p>
             </div>
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
@@ -768,6 +780,7 @@
             </div>
         </div>
     </div>
+    </div><!-- End hero-clients-section -->
 </section>
     
     <!-- AI Assistant Section -->
